tests/models/enum/unnamed/i8/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        i8
    ),
}
fn main() {}
