tests/models/enum/unnamed/i8/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/i8/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         i8
7 | |     ),
  | |_____^
